# bazel-crosscompile-example

./: .gitignore  BUILD  WORKSPACE  bazel-bazel-crosscompile-example  bazel-bin  bazel-out  bazel-testlogs  cross-toolchain.BUILD
toolchain/: BUILD  CROSSTOOL  crosstool.bzl  platforms.bzl
toolchain/aarch64_be-none/: BUILD.bazel  aarch64_be-none-linux-gnu-addr2line  aarch64_be-none-linux-gnu-ar  aarch64_be-none-linux-gnu-as  aarch64_be-none-linux-gnu-c++  aarch64_be-none-linux-gnu-c++filt  aarch64_be-none-linux-gnu-cpp  aarch64_be-none-linux-gnu-dwp  aarch64_be-none-linux-gnu-gcc-13.2.1  aarch64_be-none-linux-gnu-gcc-ar  aarch64_be-none-linux-gnu-gcc-nm  aarch64_be-none-linux-gnu-gcc-ranlib  aarch64_be-none-linux-gnu-gcov  aarch64_be-none-linux-gnu-gcov-dump  aarch64_be-none-linux-gnu-gcov-tool  aarch64_be-none-linux-gnu-gfortran  aarch64_be-none-linux-gnu-gprof  aarch64_be-none-linux-gnu-ld.bfd  aarch64_be-none-linux-gnu-nm  aarch64_be-none-linux-gnu-objcopy  aarch64_be-none-linux-gnu-objdump  aarch64_be-none-linux-gnu-ranlib  aarch64_be-none-linux-gnu-size  aarch64_be-none-linux-gnu-strings  aarch64_be-none-linux-gnu-strip
toolchain/x86_64-linux-gcc/: BUILD.bazel  x86_64-unknown-linux-gnu-ar  x86_64-unknown-linux-gnu-as  x86_64-unknown-linux-gnu-gcc  x86_64-unknown-linux-gnu-ld  x86_64-unknown-linux-gnu-nm  x86_64-unknown-linux-gnu-objcopy  x86_64-unknown-linux-gnu-objdump  x86_64-unknown-linux-gnu-strip
