package(default_visibility = ["//visibility:public"])


filegroup(
    name = "srcs", 
    srcs = glob(["**"]),
)

filegroup(
    name = "gcc",
    srcs = [
        "x86_64-unknown-linux-gnu-gcc",
        "@cross_toolchain//:gcc",
    ],
)

filegroup(
    name = "ar",
    srcs = [
        "x86_64-unknown-linux-gnu-ar",
        "@cross_toolchain//:ar",
    ],
)

filegroup(
    name = "ld",
    srcs = [
        "x86_64-unknown-linux-gnu-ld",
        "@cross_toolchain//:ld",
    ],
)

filegroup(
    name = "nm",
    srcs = [
        "x86_64-unknown-linux-gnu-nm",
        "@cross_toolchain//:nm",
    ],
)

filegroup(
    name = "objcopy",
    srcs = [
        "x86_64-unknown-linux-gnu-objcopy",
        "@cross_toolchain//:objcopy",
    ],
)

filegroup(
    name = "objdump",
    srcs = [
        "x86_64-unknown-linux-gnu-objdump",
        "@cross_toolchain//:objdump",
    ],
)

filegroup(
    name = "strip",
    srcs = [
        "x86_64-unknown-linux-gnu-strip",
        "@cross_toolchain//:strip",
    ],
)

filegroup(
    name = "as",
    srcs = [
        "x86_64-unknown-linux-gnu-as",
        "@cross_toolchain//:as",
    ],
)

filegroup(
    name = "tool-wrappers",
    srcs = [
        ":ar",
        ":as",
        ":gcc",
        ":ld",
        ":nm",
        ":objcopy",
        ":objdump",
        ":strip",
    ],
)

